# boss_deck

./: .gitignore  Dockerfile  boss_deck.db  database.py  import_review_log.py  main.py  migrate.py  pyproject.toml  railway_review_log_2026-05-09_021122.sql  requirements.txt  run.py  sm2.py  teste.py
app/: __init__.py  database.py
app/card/: routes.py
app/deck/: routes.py
app/static/: cards.js  decks.js  homepage.js  theme.js
app/templates/: cards.html  decks.html  homepage.html
static/: cards.js  decks.js  homepage.js
templates/: cards.html  decks.html  homepage.html  study.html
