[project]
name = "anki-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.6",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "psycopg2>=2.9.12",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "render-template>=0.2.0",
]
